--- a/reactStudyWrapUp.html
+++ b/reactStudyWrapUp.html
@@ -19,6 +19,7 @@
   <div class="reveal">
     <div class="slides">
       <section>
+        <img src="./assets/01-react.png" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
         <h1>GDSC React 초급반 스터디</h1>
         <h3>
           지금까지의 스터디를 마무리하며
@@ -30,6 +31,9 @@
         }
         h3 {
           font-size: 1em !important;
+        }
+        img {
+          border-radius: 10px;
         }
       </style>
 
@@ -56,52 +60,53 @@
           <h2>주요 학습 내용</h2>
         </section>
         <section>
+          <img src="./assets/03-udemy.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>Udemy React 완벽 가이드</h2>
           <h3>리액트 요약 및 핵심 기능 둘러보기</h3>
           <p><small>7주에 걸쳐서 4시간 분량의 37개의 강의를 학습했습니다 ✍</small></p>
         </section>
         <section>
+          <img src="./assets/03-project.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>실습 프로젝트</h2>
           <h3>전세계 도시 날씨 제공 서비스</h3>
           <p><small>강의를 통해 배운 내용을 토대로 프로젝트를 진행했습니다 🌞</small></p>
         </section>
       </section>
 
-      <section>
+      <section data-background-color="PowderBlue">
         <section>
           <h2>얻은 경험과 성장</h2>
-          <p>스터디 전과 후를 비교해서 어떻게 성장했는지 알아봅시다</p>
+          <p style="font-size: 2rem;">스터디 전과 후를 비교해서 어떻게 성장했는지 알아봅시다</p>
         </section>
-        <section data-markdown>
-          ## 스터디 전
-          - 써본 적 있는 스킬
-
-            HTML과 CSS의 기본적인 문법을 알고 있거나 써본 적이 없는 상태였습니다
-
-          - 기대했던 점
-
-            React의 개념을 알고 싶었고, JavaScript를 배워보고 싶었습니다
-            프로젝트를 진행해보고 싶었습니다
+        <section>
+          <h2>스터디 전</h2>
+          <ul>
+            <li>써본 적 있는 스킬</li>
+              <p style="font-size: 1.7rem;">HTML과 CSS의 기본적인 문법을 알고 있거나 써본 적이 없는 상태였습니다</p>
+            <li>기대했던 점</li>
+              <p style="font-size: 1.7rem;">React의 개념을 알고 싶었고, JavaScript를 배워보고 싶었습니다</p>
+              <p style="font-size: 1.7rem;">프로젝트를 진행해보고 싶었습니다</p>
+          </ul>
         </section>
-        <section data-markdown>
-          ## 스터디 후
-          - React 개념 학습
-
-            컴포넌트, jsx 코드 작성, props, state, useEffect, ... more! React의 기본적인 개념을 알게 되었습니다
-
-          - 프로젝트 진행
-          
-            API를 통해 날씨 데이터를 받아와서 화면에 띄워주는 프로젝트를 진행했습니다
+        <section>
+          <h2>스터디 후</h2>
+          <ul>
+            <li>React 개념 학습</li>
+              <p style="font-size: 1.7rem;">컴포넌트, jsx 코드 작성, props, state, useEffect, ... more!<br>React의 기본적인 개념을 알게 되었습니다</p>
+            <li>프로젝트 진행</li>
+              <p style="font-size: 1.6rem;">API를 통해 날씨 데이터를 받아와서 화면에 띄워주는 프로젝트를 진행했습니다</p>
+          </ul>
         </section>
       </section>
 
-      <section>
+      <section data-background-color="PowderBlue">
         <section>
-          <h2>앞으로 무엇을 해야 할까요? 🧐</h2>
+          <h2 style="font-size: 4rem;">앞으로 무엇을 해야 할까요? 🧐</h2>
           <h3>프론트엔드 개발자로서의 성장 로드맵</h3>
         </section>
         <section>
           <h2>HTML, CSS, JavaScript</h2>
+          <img src="./assets/05-HTML_CSS_JavaScript.png" style="height: 300px; background: transparent;" class="demo-logo">
           <p>웹 개발의 기반이 되는 언어들입니다</p>
           <aside class="notes">
             <p>React는 JavaScript를 기반으로 작동하기 때문에 JavaScript의 문법과 개념을 이해해야 합니다</p>
@@ -110,12 +115,14 @@
         </section>
         <section>
           <h2>React Native</h2>
-          <p>React로 배운 개념으로 iOS와 Android 애플리케이션까지 만들어보자!</p>
+          <img src="./assets/05-reactnative.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <p>React로 배운 개념으로 <br>iOS와 Android 애플리케이션까지 만들어보자!</p>
         </section>
         <section>
           <h2>CS50</h2>
           <h3>기초 컴퓨터 과학</h3>
-          <p>개발자로 살아가기 위해서 꼭 알아야 하는 핵심 개념을 배울 수 있습니다</p>
+          <img src="./assets/05-CS50.jpg" style="height: 300px; background: transparent;" class="demo-logo">
+          <p>개발자로 살아가기 위해서 꼭 알아야 하는<br>핵심 개념을 배울 수 있습니다</p>
           <aside class="notes">
             <p>학교에서 1학년 수업 듣는 것보다 이거 2주 듣는게 훨씬 이득입니다</p>
             <p>비트 개념에는 전구를, 배열을 가르칠때는 서랍을 사용하면서 직관적으로 잘 가르쳐줍니다</p>
@@ -123,31 +130,40 @@
         </section>
       </section>
 
-      <section>
+      <section data-background-color="PowderBlue">
         <section>
           <h2>강의 추천</h2>
-          <p>개인적으로 강추하는 강의들!</p>
+          <p>개인적으로 강추하는 강의들 👍</p>
+        </section>
+        <section data-background-color="#D1CF24">
+          <h2 style="font-size: 4rem;">생활코딩</h2>
+          <img src="./assets/06-javascrip.png" style="height: 300px; background: transparent;" class="demo-logo">
+          <ul>
+            <li style="font-size: 1.5rem;">기초의 정석을 깔끔하게 가르쳐준다</li>
+            <li style="font-size: 1.5rem;">프로그래밍을 공부하는 이유를 함께 설명해주기 때문에 동기부여가 된다</li>
+            <li style="font-size: 1.5rem;">FREE!</li>
+          </ul>
         </section>
         <section>
-          <h2>생활코딩</h2>
-          <p>기초의 정석을 깔끔하게 가르쳐준다</p>
-          <p>프로그래밍을 공부하는 이유를 함께 설명해주기 때문에 동기부여가 된다</p>
-          <p>FREE!</p>
+          <h2 style="font-size: 4rem;">코딩애플</h2>
+          <img src="./assets/06-codingApple.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <ul>
+            <li style="font-size: 1.5rem;">강의가 꿀잼쓰</li>
+            <li style="font-size: 1.5rem;">기초부터 현업에서 자주 쓰이는 기술까지 명확하게 알려준다</li>
+            <li style="font-size: 1.5rem;">조금 비싸긴 하지만 돈값은 충분히 한다</li>
+          </ul>
         </section>
-        <section>
-          <h2>코딩애플</h2>
-          <p>강의가 꿀잼쓰</p>
-          <p>기초부터 현업에서 자주 쓰이는 기술까지 명확하게 알려준다</p>
-          <p>조금 비싸긴 하지만 돈값은 충분히 한다</p>
-        </section>
-        <section>
-          <h2>부스트코스</h2>
-          <p>네이버에서 제공하는 무료 강의 서비스</p>
-          <p>대부분 강의가 무료이고 강의 퀄리티가 정말 좋다</p>
+        <section data-background-color="#8B6EB8">
+          <h2 style="font-size: 4rem;">부스트코스</h2>
+          <img src="./assets/06-boostcourse.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <ul>
+            <li style="font-size: 1.5rem;">네이버에서 제공하는 무료 강의 서비스</li>
+            <li style="font-size: 1.5rem;">대부분 강의가 무료이고 강의 퀄리티가 정말 좋다</li>
+          </ul>
         </section>
       </section>
 
-      <section>
+      <section data-background-color="Wheat">
         <section>
           <h2>스터디를 마무리하면서</h2>
           <p class="fragment">이전 스터디의 아쉬움</p>
