Add: course link
- 강의 하이퍼링크 추가
- 문어체로 수정

--- a/reactStudyWrapUp.html
+++ b/reactStudyWrapUp.html
@@ -45,6 +45,9 @@
         <section>
           <h2>목적</h2>
           <p>프론트엔드에서 자주 사용하는 프레임워크인 React를 배우고 자신만의 프로젝트를 만듭니다</p>
+          <aside class="notes">
+            <p>react, angular, vue</p>
+          </aside>
         </section>
         <section>
           <h2>기간</h2>
@@ -57,19 +60,19 @@
 
       <section>
         <section>
-          <h2>주요 학습 내용</h2>
+          <h2>학습 자료</h2>
         </section>
         <section>
           <img src="./assets/03-udemy.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>Udemy React 완벽 가이드</h2>
           <h3>리액트 요약 및 핵심 기능 둘러보기</h3>
-          <p><small>7주에 걸쳐서 4시간 분량의 37개의 강의를 학습했습니다 ✍</small></p>
+          <p><small>7주에 걸쳐서 4시간 분량의 37개의 강의를 학습했어요 ✍</small></p>
         </section>
         <section>
           <img src="./assets/03-project.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>실습 프로젝트</h2>
-          <h3>전세계 도시 날씨 제공 서비스</h3>
-          <p><small>강의를 통해 배운 내용을 토대로 프로젝트를 진행했습니다 🌞</small></p>
+          <h3>전 세계 도시 날씨 제공 서비스</h3>
+          <p><small>강의를 통해 배운 내용을 토대로 프로젝트를 진행했어요 🌞</small></p>
         </section>
       </section>
 
@@ -82,19 +85,19 @@
           <h2>스터디 전</h2>
           <ul>
             <li>써본 적 있는 스킬</li>
-              <p style="font-size: 1.7rem;">HTML과 CSS의 기본적인 문법을 알고 있거나 써본 적이 없는 상태였습니다</p>
+              <p style="font-size: 1.7rem;">HTML과 CSS의 기본적인 문법을 알고 있거나 써본 적이 없는 상태였어요</p>
             <li>기대했던 점</li>
-              <p style="font-size: 1.7rem;">React의 개념을 알고 싶었고, JavaScript를 배워보고 싶었습니다</p>
-              <p style="font-size: 1.7rem;">프로젝트를 진행해보고 싶었습니다</p>
+              <p style="font-size: 1.7rem;">React의 개념을 알고 싶었고, JavaScript를 배워보고 싶었어요</p>
+              <p style="font-size: 1.7rem;">프로젝트를 진행해 보고 싶었어요</p>
           </ul>
         </section>
         <section>
           <h2>스터디 후</h2>
           <ul>
             <li>React 개념 학습</li>
-              <p style="font-size: 1.7rem;">컴포넌트, jsx 코드 작성, props, state, useEffect, ... more!<br>React의 기본적인 개념을 알게 되었습니다</p>
+              <p style="font-size: 1.7rem;">컴포넌트, jsx 코드 작성, props, state, useEffect ... more!<br>React의 기본적인 개념을 알게 되었어요</p>
             <li>프로젝트 진행</li>
-              <p style="font-size: 1.6rem;">API를 통해 날씨 데이터를 받아와서 화면에 띄워주는 프로젝트를 진행했습니다</p>
+              <p style="font-size: 1.6rem;">API를 통해 날씨 데이터를 받아와서 화면에 띄워주는 프로젝트를 진행했어요</p>
           </ul>
         </section>
       </section>
@@ -106,26 +109,26 @@
         </section>
         <section>
           <h2>HTML, CSS, JavaScript</h2>
-          <img src="./assets/05-HTML_CSS_JavaScript.png" style="height: 300px; background: transparent;" class="demo-logo">
-          <p>웹 개발의 기반이 되는 언어들입니다</p>
+          <img src="./assets/05-HTML_CSS_JavaScript.png" style="height: 200px; background: transparent;" class="demo-logo">
+          <p style="font-size: 1.5rem;">웹 개발의 기반이 되는 언어들입니다</p>
           <aside class="notes">
-            <p>React는 JavaScript를 기반으로 작동하기 때문에 JavaScript의 문법과 개념을 이해해야 합니다</p>
-            <p>CSS의 개념을 모르면 React보다 CSS 때문에 원하는 디자인을 만들기가 어려워집니다</p>
+            <p>React는 JavaScript를 기반으로 작동하기 때문에 JavaScript의 문법과 개념을 이해해야 해요!</p>
+            <p>CSS의 개념을 모르면 React보다 CSS 때문에 원하는 디자인을 만들기가 어려워져요..</p>
           </aside>
         </section>
         <section>
           <h2>React Native</h2>
           <img src="./assets/05-reactnative.png" style="height: 400px; background: transparent;" class="demo-logo">
-          <p>React로 배운 개념으로 <br>iOS와 Android 애플리케이션까지 만들어보자!</p>
+          <p style="font-size: 1.5rem;">React로 배운 개념으로 <br>iOS와 Android 애플리케이션까지 만들어봐요!</p>
         </section>
         <section>
           <h2>CS50</h2>
           <h3>기초 컴퓨터 과학</h3>
-          <img src="./assets/05-CS50.jpg" style="height: 300px; background: transparent;" class="demo-logo">
-          <p>개발자로 살아가기 위해서 꼭 알아야 하는<br>핵심 개념을 배울 수 있습니다</p>
+          <img src="./assets/05-CS50.jpg" style="height: 350px; background: transparent;" class="demo-logo">
+          <p style="font-size: 1.5rem;">개발자로 살아가기 위해서 꼭 알아야 하는<br>핵심 개념을 배울 수 있어요</p>
           <aside class="notes">
-            <p>학교에서 1학년 수업 듣는 것보다 이거 2주 듣는게 훨씬 이득입니다</p>
-            <p>비트 개념에는 전구를, 배열을 가르칠때는 서랍을 사용하면서 직관적으로 잘 가르쳐줍니다</p>
+            <p>학교에서 1학년 수업 듣는 것보다 이거 2주 듣는 게 훨씬 이득이에요!</p>
+            <p>비트 개념에는 전구를, 배열을 가르칠 때는 서랍을 사용하면서 직관적으로 잘 가르쳐줍니다</p>
           </aside>
         </section>
       </section>
@@ -137,28 +140,34 @@
         </section>
         <section data-background-color="#D1CF24">
           <h2 style="font-size: 4rem;">생활코딩</h2>
-          <img src="./assets/06-javascrip.png" style="height: 300px; background: transparent;" class="demo-logo">
+          <a href="https://www.opentutorials.org/course/1">
+            <img src="./assets/06-javascrip.png" style="height: 300px; background: transparent;" class="demo-logo">
+          </a>
           <ul>
-            <li style="font-size: 1.5rem;">기초의 정석을 깔끔하게 가르쳐준다</li>
-            <li style="font-size: 1.5rem;">프로그래밍을 공부하는 이유를 함께 설명해주기 때문에 동기부여가 된다</li>
+            <li style="font-size: 1.5rem;">기초의 정석을 깔끔하게 가르쳐줘요</li>
+            <li style="font-size: 1.5rem;">프로그래밍을 공부하는 이유를 함께 설명해 주기 때문에 동기부여가 돼요</li>
             <li style="font-size: 1.5rem;">FREE!</li>
           </ul>
         </section>
         <section>
           <h2 style="font-size: 4rem;">코딩애플</h2>
-          <img src="./assets/06-codingApple.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <a href="https://codingapple.com/">
+            <img src="./assets/06-codingApple.png" style="height: 400px; background: transparent;" class="demo-logo">
+          </a>
           <ul>
             <li style="font-size: 1.5rem;">강의가 꿀잼쓰</li>
-            <li style="font-size: 1.5rem;">기초부터 현업에서 자주 쓰이는 기술까지 명확하게 알려준다</li>
-            <li style="font-size: 1.5rem;">조금 비싸긴 하지만 돈값은 충분히 한다</li>
+            <li style="font-size: 1.5rem;">기초부터 현업에서 자주 쓰이는 기술까지 명확하게 알려줘요</li>
+            <li style="font-size: 1.5rem;">조금 비싸긴 하지만 돈값은 충분히 한다!</li>
           </ul>
         </section>
         <section data-background-color="#8B6EB8">
           <h2 style="font-size: 4rem;">부스트코스</h2>
-          <img src="./assets/06-boostcourse.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <a href="https://www.boostcourse.org/opencourse">
+            <img src="./assets/06-boostcourse.png" style="height: 400px; background: transparent;" class="demo-logo">
+          </a>
           <ul>
             <li style="font-size: 1.5rem;">네이버에서 제공하는 무료 강의 서비스</li>
-            <li style="font-size: 1.5rem;">대부분 강의가 무료이고 강의 퀄리티가 정말 좋다</li>
+            <li style="font-size: 1.5rem;">대부분 강의가 무료이고 강의 퀄리티가 정말 좋아요</li>
           </ul>
         </section>
       </section>
@@ -170,12 +179,42 @@
           <p class="fragment">제대로 해보자!</p>
           <p class="fragment fade-up">여러분이 최고입니다 😭</p>
           <p class="fragment fade-down">정말 고마워요 🙇</p>
+          <aside class="notes">
+            <ul>
+              <li>
+                GDSC 3년차로서 여러 차례 스터디를 진행하였습니다.<br>많이 배우기도 했지만 의사소통이나 진행에 있어서 아쉬움도 느겼습니다
+              </li>
+              <li>
+                체계적으로 스터디를 준비했고 운영했습니다
+              </li>
+              <li>
+                준비하는 과정에서 힘든 시기도 있었지만, 적극적인 참여로 큰 힘이 되었습니다
+              </li>
+              <li>
+                재밌다는 여러분의 한마디가 저에게는 정말 큰 응원이 되었습니다
+              </li>
+              <li>
+                이번 스터디를 통해서 저 역시 많은 것들을 배울 수 있었고 이렇게 마무리 할 수 있었던 것도 여러분 덕분입니다. 정말 감사해요
+              </li>
+              <li>
+                학교에서 자주 만나면 좋겠네요
+              </li>
+            </ul>
+          </aside>
         </section>
       </section>
 
       <section>
         <h2>대면 모임?</h2>
         <h3>1월 30일 화요일</h3>
+      </section>
+
+      <section>
+        <h2><del>숙제</del> 부탁🙏</h2>
+        <p>스터디를 진행하면서 여러분의 의견을 남겨주세요</p>
+        <a href="https://forms.gle/WJDdRBKqYsqNQeBF6">
+          <p>Google form</p>
+        </a>
       </section>
 
     </div>
