--- a/reactStudyWrapUp.html
+++ b/reactStudyWrapUp.html
@@ -127,7 +127,6 @@
           <img src="./assets/05-CS50.jpg" style="height: 350px; background: transparent;" class="demo-logo">
           <p style="font-size: 1.5rem;">개발자로 살아가기 위해서 꼭 알아야 하는<br>핵심 개념을 배울 수 있어요</p>
           <aside class="notes">
-            <p>학교에서 1학년 수업 듣는 것보다 이거 2주 듣는 게 훨씬 이득이에요!</p>
             <p>비트 개념에는 전구를, 배열을 가르칠 때는 서랍을 사용하면서 직관적으로 잘 가르쳐줍니다</p>
           </aside>
         </section>
@@ -182,7 +181,7 @@
           <aside class="notes">
             <ul>
               <li>
-                GDSC 3년차로서 여러 차례 스터디를 진행하였습니다.<br>많이 배우기도 했지만 의사소통이나 진행에 있어서 아쉬움도 느겼습니다
+                GDSC 3년차로서 여러 차례 스터디를 진행하였습니다.<br>많이 배우기도 했지만 의사소통이나 진행에 있어서 아쉬움도 느꼈습니다
               </li>
               <li>
                 체계적으로 스터디를 준비했고 운영했습니다
