Fix: asset path issues
- reveal.jsの必須ファイルのPath修正
- イメージのPath修正

--- a/ja/reactStudyWrapUp_JP.html
+++ b/ja/reactStudyWrapUp_JP.html
@@ -7,19 +7,19 @@
 
   <title>GDSC React 勉強会の終了</title>
 
-  <link rel="stylesheet" href="dist/reset.css">
-  <link rel="stylesheet" href="dist/reveal.css">
-  <link rel="stylesheet" href="dist/theme/moon.css">
+  <link rel="stylesheet" href="../dist/reset.css">
+  <link rel="stylesheet" href="../dist/reveal.css">
+  <link rel="stylesheet" href="../dist/theme/moon.css">
 
   <!-- Theme used for syntax highlighted code -->
-  <link rel="stylesheet" href="plugin/highlight/monokai.css">
+  <link rel="stylesheet" href="../plugin/highlight/monokai.css">
 </head>
 
 <body>
   <div class="reveal">
     <div class="slides">
       <section>
-        <img src="./assets/01-react.png" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+        <img src="./../assets/01-react.png" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
         <h1>GDSC React 初級クラスの勉強会</h1>
         <h3>
           今までの勉強会をまとめながら
@@ -63,13 +63,13 @@
           <h2>学習資料</h2>
         </section>
         <section>
-          <img src="./assets/03-udemy.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+          <img src="./../assets/03-udemy.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>React - The Complete Guide 2024</h2>
           <h3>React Summary & Core Feature Walkthrough</h3>
           <p><small>７週間にわたり、合計４時間の３７個の講座を学習しました ✍</small></p>
         </section>
         <section>
-          <img src="./assets/03-project.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+          <img src="./../assets/03-project.jpg" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
           <h2>自習プロジェクト</h2>
           <h3>全世界の都市の天気提供サービス</h3>
           <p><small>講座で学んだ内容を基にプロジェクトを進めました 🌞</small></p>
@@ -109,7 +109,7 @@
         </section>
         <section>
           <h2>HTML, CSS, JavaScript</h2>
-          <img src="./assets/05-HTML_CSS_JavaScript.png" style="height: 200px; background: transparent;" class="demo-logo">
+          <img src="./../assets/05-HTML_CSS_JavaScript.png" style="height: 200px; background: transparent;" class="demo-logo">
           <p style="font-size: 1.5rem;">ウェブ開発の基礎となる言語です</p>
           <aside class="notes">
             <p>ReactはJavaScriptを基に動作するので、JavaScriptの文法と概念を理解する必要があります！</p>
@@ -118,13 +118,13 @@
         </section>
         <section>
           <h2>React Native</h2>
-          <img src="./assets/05-reactnative.png" style="height: 400px; background: transparent;" class="demo-logo">
+          <img src="./../assets/05-reactnative.png" style="height: 400px; background: transparent;" class="demo-logo">
           <p style="font-size: 1.5rem;">Reactで学んだ知識で<br>iOSとAndroidアプリも作ってみましょう！</p>
         </section>
         <section>
           <h2>CS50</h2>
           <h3>基礎コンピュータ科学</h3>
-          <img src="./assets/05-CS50.jpg" style="height: 350px; background: transparent;" class="demo-logo">
+          <img src="./../assets/05-CS50.jpg" style="height: 350px; background: transparent;" class="demo-logo">
           <p style="font-size: 1.5rem;">デベロッパーとして生きていくために必ず知っておくべきの<br>重要な知識を学ぶことができます</p>
           <aside class="notes">
             <p>ビットには電球を、配列を教えるときは引き出しを使って分かりやすく教えてくれます</p>
@@ -140,7 +140,7 @@
         <section data-background-color="#D1CF24">
           <h2 style="font-size: 4rem;">Opentutorials</h2>
           <a href="https://www.opentutorials.org/course/1">
-            <img src="./assets/06-javascrip.png" style="height: 300px; background: transparent;" class="demo-logo">
+            <img src="./../assets/06-javascrip.png" style="height: 300px; background: transparent;" class="demo-logo">
           </a>
           <ul>
             <li style="font-size: 1.5rem;">基礎を定石を分かりやすく教えてくれます</li>
@@ -151,7 +151,7 @@
         <section>
           <h2 style="font-size: 4rem;">Coding apple</h2>
           <a href="https://codingapple.com/">
-            <img src="./assets/06-codingApple.png" style="height: 400px; background: transparent;" class="demo-logo">
+            <img src="./../assets/06-codingApple.png" style="height: 400px; background: transparent;" class="demo-logo">
           </a>
           <ul>
             <li style="font-size: 1.5rem;">講座がおもしろ</li>
@@ -162,7 +162,7 @@
         <section data-background-color="#8B6EB8">
           <h2 style="font-size: 4rem;">Boost course</h2>
           <a href="https://www.boostcourse.org/opencourse">
-            <img src="./assets/06-boostcourse.png" style="height: 400px; background: transparent;" class="demo-logo">
+            <img src="./../assets/06-boostcourse.png" style="height: 400px; background: transparent;" class="demo-logo">
           </a>
           <ul>
             <li style="font-size: 1.5rem;">Naverで提供する無料講座サービス</li>
@@ -220,10 +220,10 @@
     </div>
   </div>
 
-  <script src="dist/reveal.js"></script>
-  <script src="plugin/notes/notes.js"></script>
-  <script src="plugin/markdown/markdown.js"></script>
-  <script src="plugin/highlight/highlight.js"></script>
+  <script src="../dist/reveal.js"></script>
+  <script src="../plugin/notes/notes.js"></script>
+  <script src="../plugin/markdown/markdown.js"></script>
+  <script src="../plugin/highlight/highlight.js"></script>
   <script>
     // More info about initialization & config:
     // - https://revealjs.com/initialization/
